<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/quiz_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/questionOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionOne"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/textSize" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/questionOneChoiceOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/questionOnecChoiceOne" />

            <RadioButton
                android:id="@+id/questionOneChoiceTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/questionOnecChoiceTwo" />

            <RadioButton
                android:id="@+id/questionOneChoiceThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/questionOneChoiceThree" />
        </RadioGroup>

        <TextView
            android:id="@+id/questionTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/questionTwo"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/textSize" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/questionTwoChoiceOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionTwoChoiceOne" />

            <RadioButton
                android:id="@+id/questionTwoChoiceTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionTwoChoiceTwo" />

            <RadioButton
                android:id="@+id/questionTwoChoiceThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionTwoChoiceThree" />
        </RadioGroup>

        <TextView
            android:id="@+id/questionThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/questionThree"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/textSize" />


        <CheckBox
            android:id="@+id/questionThreeChoiceOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionThreeChoiceOne" />

        <CheckBox
            android:id="@+id/questionThreeChoiceTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionThreeChoiceTwo" />

        <CheckBox
            android:id="@+id/questionThreeChoiceThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionThreeChoiceThree" />

        <CheckBox
            android:id="@+id/questionThreeChoiceFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionThreeChoiceFour" />


        <TextView
            android:id="@+id/question4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/questionFour"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/textSize" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question4_choiceOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionFourChoiceOne" />

            <RadioButton
                android:id="@+id/questionFourChoiceTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionFourChoiceTwo" />

        </RadioGroup>

        <TextView
            android:id="@+id/question5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/question10_answer"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/questionFive"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/questionFiveAnswer"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text" />

        <Button
            android:id="@+id/submitAnswers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitAnswers"
            android:text="@string/submitAnswers" />

    </LinearLayout>

</ScrollView>